# ncurses-top-utility

./: CMakeLists.txt  README.MD  Structure.txt  makefile
include/: graph.h  input_handler.h  panels.h  process.h  process_display.h  top_panel.h  ui.h
src/: graph.c  input_handler.c  main.c  panels.c  process.c  process_display.c  top_panel.c  ui.c
